[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ansible-tower-mcp"
version = "1.2.13"
description = "Ansible Tower MCP Server for Agentic AI!"
readme = "README.md"
authors = [{ name = "Audel Rouhi", email = "knucklessg1@gmail.com" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Public Domain",
    "Environment :: Console",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.8.1",
    "urllib3>=2.2.2",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.13.0.2",
    "eunomia-mcp>=0.3.10"
]

a2a = [
    "pydantic-ai-slim[fastmcp,openai,anthropic,google,huggingface,a2a]>=1.32.0",
    "pydantic-ai-skills",
]

all = [
    "fastmcp>=2.13.0.2",
    "eunomia-mcp>=0.3.10",
    "pydantic-ai-slim[fastmcp,openai,anthropic,google,huggingface,a2a]>=1.32.0",
    "pydantic-ai-skills",
]

[project.scripts]
ansible-tower-mcp = "ansible_tower_mcp.ansible_tower_mcp:ansible_tower_mcp"
ansible-tower-a2a = "ansible_tower_mcp.ansible_tower_a2a:agent_server"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ansible_tower_mcp = ["mcp_config.json", "skills/**"]
